src/css/style.css
@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);

body {
    background-color: #0e0e0e;
    color: whitesmoke;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    font-family: Poppins, sans-serif;

    --square-size: 85px;
}

.chess {
    display: grid;
    grid-template-areas: 'left_panel header panel' 'left_panel board panel';
    gap: 1.5rem;
    grid-template-columns: 20rem 1fr 25rem;
    grid-template-rows: 2.5rem calc(var(--square-size) * 8);
}

.left_panel {
    grid-area: left_panel;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1rem;
}

.improvements {
    line-height: 1.5;
}

.improvements h1 {
    margin-top: 3rem;
    font-size: 1.5rem;
    font-weight: 600;
}
.improvements h1:first-child {
    margin-top: 0;
}
.improvements p {
    font-style: italic;
    margin-top: 1rem;
}

.playmode {
    display: flex;
    flex-direction: column;
    justify-content: end;
    gap: 1rem;
}

.playmode button {
    display: flex;
    justify-content: space-evenly;
    align-items: center;

    /*Draw the button background*/
    background-color: #222;
    border: 1px solid #222;
    padding: 0.8rem 0.3rem;
    border-radius: 1.4rem;

    /*Draw the text*/
    color: whitesmoke;
    font-size: 1.5rem;
    font-weight: 600;
}

.playmode_arrow {
    visibility: hidden;
}

.playmode_arrow::before {
    content: '▶';
}

.header {
    grid-area: header;
    display: flex;
    justify-content: space-between;
}

.next_player {
    display: flex;
    align-items: center;
}

.next_player,
.evaluation {
    background-color: #222;
    border-radius: 1rem;
    padding: 0.5rem 1rem;
}

.white_to_move,
.black_to_move {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.evaluation {
    display: flex;
    align-items: center;
}

.square {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 0.75rem;
}
.white_to_move .square {
    background-color: whitesmoke;
}
.black_to_move .square {
    background-color: #000;
}

.board {
    grid-area: board;
    border-radius: 1rem;
    width: calc(var(--square-size) * 8);
    height: calc(var(--square-size) * 8);
}

.panel {
    grid-area: panel;
    display: flex;
    flex-direction: column;
}

.moves {
    flex-grow: 1;
    background-color: #222;
    border-radius: 1rem;
    padding: 2.5rem 2rem;
    overflow-y: auto;

    display: grid;
    grid-template-columns: 1fr 3fr 3fr;
    grid-auto-rows: 1.8rem;

    align-items: center;
    justify-items: center;
    align-content: start;
    gap: 0.25rem;
}

.moves::-webkit-scrollbar {
    width: 0.8rem;
}

.moves::-webkit-scrollbar-thumb {
    background: whitesmoke;
    border-radius: 1rem;
}

.move {
    cursor: pointer;
    border-radius: 0.5rem;
    padding: 0.4rem 1.5rem;
    border: thin solid transparent;
    min-width: 2rem;
    text-align: center;
}

.move:hover {
    background-color: #0e0e0e;
    border-color: #888;
}

.currentMove {
    font-weight: 700;
    border-color: whitesmoke;
}

.actions {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
    font-size: 3rem;
    margin-top: 1rem;
}

.actions button {
    user-select: none;

    /*Draw the button background*/
    background-color: #222;
    border: 1px solid #222;
    padding: 0.2rem 0;
    border-radius: 1.5rem;

    /*Draw the text*/
    color: whitesmoke;
    font-size: 2.5rem;
}

.actions button:disabled {
    color: rgb(119, 119, 119);
}

.actions button:hover:not(:disabled),
.playmode button:hover {
    background-color: #444;
    border: 1px solid #888;

    cursor: pointer;
}

